--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "6.1.0",
-    "fastify": "^5.2.0"
+    "fastify": "^5.2.0",
+    "fastify-type-provider-zod": "^4.0.2",
+    "zod": "^3.24.1"
   }
 }
